--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,43 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
   min-height: 100vh;
+  background-image: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
+}
+
+.search-form {
+  min-height: 10vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+}
+
+.search-bar {
+  width: 50%;
+  border: none;
+  padding: 10px;
+  margin: 0 0 30px 0;
+}
+.search-bar:focus,
+.search-button:focus {
+  outline: none;
+}
+.search-bar:hover {
+  background-color: rgb(236, 239, 243);
+}
+.search-button {
+  background: lightcoral;
+  border: none;
+  padding: 10px 20px;
   color: white;
+  margin: 0 0 30px 0;
 }
 
-.App-link {
-  color: #61dafb;
+.search-button:hover {
+  color: rgb(236, 239, 243);
+  background: rgb(241, 109, 109);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.recipes {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
 }
